fix extra padding in expert details page

--- a/src/templates/ExpertDetails.module.scss
+++ b/src/templates/ExpertDetails.module.scss
@@ -52,7 +52,6 @@
 
 .description {
   flex: 1;
-  padding: 2rem;
 
   p {
     margin: 10px;
